--- a/app/src/main/res/layout/item_gamerz.xml
+++ b/app/src/main/res/layout/item_gamerz.xml
@@ -15,7 +15,7 @@
         android:background="#2E3B8C"
         android:gravity="center"
         android:text="Liam"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
 
